Tue Nov 11 19:42:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Hello/run_test.pl:
          Small improvement

        * tests/Two_Objects/run_test.pl
        * tests/Typedef_String_Array/run_test.pl
        * tests/UNKNOWN_Exception/run_test.pl
          Updated to the new test framework

Tue Nov 11 19:01:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/PortableInterceptors/PICurrent_NameService/PICurrent_NameService.mpc:
        * DevGuideExamples/RTCORBA/RTCORBA.mpc:
          Use seperate project for idl files

Tue Nov 11 17:33:34 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Bug_3495_Regression.mpc:

          Corrected building on minimum systems.

Tue Nov 11 15:02:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3481_Regression/Bug_3481_Regression.cpp:

          Removed unused parameter names.

Tue Nov 11 14:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1535_Regression/run_test.pl:
        * tests/Bug_1639_Regression/run_test.pl:
        * tests/Bug_2201_Regression/run_test.pl:
        * tests/Bug_2243_Regression/run_test.pl:
        * tests/Bug_2543_Regression/run_test.pl:
        * tests/Policies/run_test.pl
          Converted to the new test framework

        * tests/Bug_2126_Regression/test.cpp:
          No need for ACE_UNUSED_ARG

Tue Nov 11 12:02:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/client.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/server.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Test.idl:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.h:

          Fixed the Fuzz errors from
          Mon Nov 10 23:21:57 UTC 2008  Trevor Fields  <fields_t@ociweb.com>
